-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0 RC 1
-
Installer 364
Mac 10.7 and 10.8
-
-
05f5f194f597723cfa67db04f31814cb5ccabd0c ; 9061ab9f7ea0f84997c3fd7659d92267ad36a4ba.
The documentation is not properly displayed / disappears in Qt Creator and Assistant
1 - Open Qt Creator
2 - Go to Help
3 - Select QtCore
problem => the page is displayed for a second and the disappears.
In Qt Assistant the same problem happens.
- is required for
-
QTBUG-27426 Qt 5.0 Final release tasks
-
- Closed
-
- relates to
-
QTBUG-28365 Mac 10.7: browser example does not load a page
-
- Closed
-
-
QTBUG-28380 Mac: FancyBrowser loaded page disappears after showing
-
- Closed
-
-
QTCREATORBUG-8405 Mac: Documentation page disappears when the scrollbars are animated to fade out
-
- Closed
-
| For Gerrit Dashboard: QTBUG-28389 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 42414,1 | Make workaround for auto-hiding webview also work for proxy styles. | stable | qt/qtwebkit | Status: ABANDONED | -2 | 0 |
| 42433,2 | Mac: disable transient scrollbar animations for non-QScrollBars | stable | qt/qtbase | Status: MERGED | +2 | 0 |