src/widgets/widgets/qabstractscrollarea.cpp
@@ -490,7 +490,7 @@ void QAbstractScrollAreaPrivate::layoutChildren()
             horizontalScrollBarRect.adjust(vsbExt, 0, 0, 0);
 #endif
 #ifdef Q_OS_MAC
-        if (!hasCornerWidget && QSysInfo::macVersion() >= QSysInfo::MV_10_8 && q->style()->styleHint(QStyle::SH_ScrollBar_Transient))
+        if (!hasCornerWidget && QSysInfo::macVersion() >= QSysInfo::MV_10_8 && q->style()->styleHint(QStyle::SH_ScrollBar_Transient, 0, hbar))
             horizontalScrollBarRect.adjust(0, 0, cornerOffset.x(), 0);
 #endif
         scrollBarContainers[Qt::Horizontal]->setGeometry(QStyle::visualRect(opt.direction, opt.rect, horizontalScrollBarRect));
@@ -500,7 +500,7 @@ void QAbstractScrollAreaPrivate::layoutChildren()
     if (needv) {
         QRect verticalScrollBarRect  (QPoint(cornerPoint.x(), controlsRect.top() + hHeaderBottom),  QPoint(controlsRect.right(), cornerPoint.y() - 1));
 #ifdef Q_OS_MAC
-        if (!hasCornerWidget && QSysInfo::macVersion() >= QSysInfo::MV_10_8 && q->style()->styleHint(QStyle::SH_ScrollBar_Transient))
+        if (!hasCornerWidget && QSysInfo::macVersion() >= QSysInfo::MV_10_8 && q->style()->styleHint(QStyle::SH_ScrollBar_Transient, 0, vbar))
             verticalScrollBarRect.adjust(0, 0, 0, cornerOffset.y());
 #endif
         scrollBarContainers[Qt::Vertical]->setGeometry(QStyle::visualRect(opt.direction, opt.rect, verticalScrollBarRect));
